fixing table on mobile view

--- a/design/static/styles/common.css
+++ b/design/static/styles/common.css
@@ -169,11 +169,11 @@ option {
 
   table {
     display: block;
-    max-width: -moz-fit-content;
-    max-width: fit-content;
+    /* max-width: -moz-fit-content;
+    max-width: fit-content; */
     /* margin: 0 auto; */
     overflow-x: auto;
-    white-space: nowrap;
+    /* white-space: nowrap; */
   }
 }
 
@@ -259,10 +259,10 @@ option {
 
   table {
     display: block;
-    max-width: -moz-fit-content;
-    max-width: fit-content;
+    /* max-width: -moz-fit-content;
+    max-width: fit-content; */
     /* margin: 0 auto; */
     overflow-x: auto;
-    white-space: nowrap;
+    /* white-space: nowrap; */
   }
 }
